# iOS-App-Dylib-Patches

./: .clang-format  .clangd  .gitignore  .gitmodules  AppLovin.m  AppLovinMax.m  CLAUDE.md  CMakeLists.txt  CallRecord.m  CallRecordWav.m  DylibLoader.m  DylibLoaderNew.m  MicSpoof.m  NetworkLoader.m  README.md  SafariPopupBlocker.m  Vungle.m  WaLogger.m  WhatsAppDisableSiriEntitlement.m  bridge.py  bridgenew.py  compile.sh  serve
lib/utils/: foundation.h  foundation.m  logger.h  logger.m  logger_class.m  utils.h  utils.m
scripts/: CallRecordingBinToWav.sh  bridge.py  bridgenew.py  compile  compile.sh  compile_network_dylib_loader.sh  find_mic.js  serve
scripts/serve-/: telegram  wechat  whatsapp
src/: dylib_loader.h  initialize.h  lc_utils.h  logger.h  utils.h
src/tweaks/: FlexDispatcher.m  NetworkLoader.m  VTableExplorer.m
src/tweaks/UI/: DisableScreenCaptureDetection.m
src/tweaks/general/: Contacts.env  Contacts.m  Force-iPad.m  Force-iPhone.m  LocationSpoof.env  LocationSpoof.m
src/tweaks/grindr/: BidMachine.m  GrindrAdBlock.env  GrindrAdBlock.m  GrindrAds.m  SSL.env  SSL.m  Unity.m
src/tweaks/telegram/: BypassSecureEntry.m  DisableSiriINPreferences.m  FIndCopyProtected.env  FindCopyProtected.m  RemoveObserver.m  SpoofCloudKit.m
src/tweaks/wechat/: WebRecorder.m
src/tweaks/whatsapp/: BypassSecureEntry.m  CallDebug_File.m  CallRecord.m  CallRecordExp.m  CallRecordWav.m  CallRecordWavExp.m  CameraSpoof.m  MicSpoof.m  PitchChanger.m  WaLogger.m  WhatsAppDisableSiriEntitlement.m
tweaks/: DylibLoader.m  DylibLoaderNew.m  FlexDispatcher.m  NetworkLoader.env  NetworkLoader.m  VTableExplorer.m
tweaks/UI/: DisableScreenCaptureDetection.m
tweaks/general/: Contacts.m
tweaks/telegram/: BypassSecureEntry.m  DisableSiriINPreferences.m  FIndCopyProtected.env  FindCopyProtected.m  RemoveObserver.m  SpoofCloudKit.env  SpoofCloudKit.m  Telegram.env
tweaks/wechat/: WebRecorder.env  WebRecorder.m
tweaks/whatsapp/: BypassSecureEntry.m  CallDebugPlus.m  CallDebug_File.m  CallRecord.m  CallRecordExp.m  CallRecordWav.m  CallRecordWavExp.m  CameraSpoof.env  CameraSpoof.m  MicSpoof.m  MicSpoof.m.bak  PitchChanger.env  PitchChanger.m  WaLogger.m  WhatsAppDisableSiriEntitlement.m
